fix: social links not visible on homepage

--- a/src/styles/components/bioSection.scss
+++ b/src/styles/components/bioSection.scss
@@ -265,6 +265,13 @@
   display: none;
 }
 
+.linksAreaBio {
+  width: 100%;
+  padding: 0 2.5vw 3.2vw 2.5vw;
+  max-height: 100%;
+  z-index: 99;
+}
+
 .linkList {
   display: flex;
   flex-direction: row;
